--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </nav>
     </header>
     <section>
-        <h2>Habitat for Humanity believes that every man, woman and child should have a decent, safe and affordable place to live. We build and repair houses all over the world using volunteer labor and donations. Our partner families purchase these houses through no-profit, no-interest mortgage loans or innovative financing methods.
+        <h2>Our Vision</h2>
+        <p>We strive to build homes, communities, and hope. Habitat for Humanity believes that every man, woman and child should have a decent, safe and affordable place to live. We build and repair houses all over the world using volunteer labor and donations. Our partner families purchase these houses through no-profit, no-interest mortgage loans or innovative financing methods.
 
-</h2>
-        <p>We strive to build homes, communities, and hope.</p>
+</p>
     </section>
     <footer>
         <p>© 2025 Habitat for Humanity</p>
