--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img src="media/menu_icon_default.jpg" alt="habitat logo">
     <header>
         <h1>About Us</h1>
         <nav>
