--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="media/media/YP3_14to25.jpg" alt="habitat logo">
+    <img src="media/YP3_14to25.jpg" alt="habitat logo">
     <header>
         <h1>About Us</h1>
         <nav>
