--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
     <title>Mission - Habitat for Humanity</title>
     <link rel="stylesheet" href="style.css">
 </head>
-    <img src="media/YP3_14to25.jpg" alt="habitat logo">
+    <img src="media/default-1_15.jpg" alt="habitat logo">
 <body>
     <header>
         <h1>Our Mission</h1>
