--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="media/menu_icon_default.jpg" alt="habitat logo">
+    <img src="media/logo.png" alt="habitat logo">
     <header>
         <h1>Our Projects</h1>
         <nav>
