--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <section>
-        <h2>Our Vision</h2>
+        <h2>Our Mission</h2>
         <p>We strive to build homes, communities, and hope. Habitat for Humanity believes that every man, woman and child should have a decent, safe and affordable place to live. We build and repair houses all over the world using volunteer labor and donations. Our partner families purchase these houses through no-profit, no-interest mortgage loans or innovative financing methods.
 
 </p>
