--- a/about.html
+++ b/about.html
@@ -21,7 +21,9 @@
     </header>
     <section>
         <h2>Who We Are</h2>
-        <p>Habitat for Humanity is a nonprofit organization that works toward building affordable homes for families in need.</p>
+        <p>Habitat for Humanity is a nonprofit organization that works toward building affordable homes for families in need. There are nearly 2 billion people around the world who live in slum housing and more than 100 million are homeless. Families left homeless by natural disasters, war and civil unrest often face dire housing situations as they struggle to rebuild their lives. We provide shelter and housing assistance to help these families recover.
+
+</p>
     </section>
     <footer>
         <p>© 2025 Habitat for Humanity</p>
