--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
     </header>
     <section>
         <h2>Our Mission Statement</h2>
-        <p>We are dedicated to eliminating poverty housing and homelessness worldwide by building decent, affordable houses.</p>
+        <p>We are dedicated to eliminating poverty housing and homelessness worldwide by building decent, affordable houses. Volunteer Amy Miles lends her voice in support of Habitat's advocacy efforts and Global Village trips. Use the audio controls below to hear her stories.</p>
     </section>
     <footer>
         <p>© 2025 Habitat for Humanity</p>
