--- a/index.html
+++ b/index.html
@@ -30,3 +30,12 @@
     </footer>
 </body>
 </html>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <button id="showImageBtn">Show Image</button>
+    <button id="hideImageBtn">Hide Image</button>
+    <button id="toggleImageBtn">Toggle Image</button>
+    
+    <div id="imageContainer">
+    </div>
+
+    <script src="script.js"></script>
